--- a/jquery/WebContent/1.selector/08_arrayHandling.html
+++ b/jquery/WebContent/1.selector/08_arrayHandling.html
@@ -17,10 +17,19 @@
 		/*
 		$.grep();
 		*/
+		let filterNameArray=$.grep(memberNameArray,function(name,index){
+			return name.startsWith('K');
+		});
+		filterNameArray=$.grep(memberNameArray,(name,index)=>name.startsWith('k'));
 		
+		$.each(filterNameArray,function(i,name){
+			$('.selected1').append(name+"");
+		})
 		
-		
-		
+		let filterMemberArray=$.grep(memberArray,(member,index)=>member.address=='경기미');
+		$.each(filterMemberArray,(i,member)=>
+							{$('.selected2').append(`[${member.id}],${member.name},${member.address}`)}
+			   );
 		
 		
 		
