--- a/jquery/WebContent/1.selector/15_attributeSelector.html
+++ b/jquery/WebContent/1.selector/15_attributeSelector.html
@@ -16,18 +16,23 @@ div {
 		/*
 		id속성이 content- 로 시작하는( ^= )
 		*/
+		$("div[id^='content-']").css('border','1px solid');
 		/*
 		id속성이 1 로 끝나는( $= )
 		*/
+		$("div[id$='1']").css('background','gold');
 		/*
 		name 속성이 man과 일치하는( = )
 		*/
+		$("input[name='man']").css('border','3px dotted purple');
 		/*
 		name 속성이 man글자을 포함하는( *= )
 		*/
+		$("input[name*='man']").css('background','orange');
 		/*
-		name 속성이 man단어를  포함하는( ~= )
+		name 속성이 man단어를  포함하는( ~= ) --> superman(X) super man(O)
 		*/
+		$("input[name~='man']").css('background','tomato');
 		
 	});
 </script>
