--- a/jquery/WebContent/3.event/event02.html
+++ b/jquery/WebContent/3.event/event02.html
@@ -29,7 +29,15 @@ td {
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script type="text/javascript">
 $(function() {
-	
+	$('#txtInput').keyup(function(e){
+		console.log("key: "+e.key);
+		console.log("keyCode: "+e.keyCode);
+		console.log("code: "+e.code);
+		$('#txtKeyCode').val(e.key+'['+e.keyCode+'],['+e.code+']');
+		if(e.keyCode==13){
+			alert('가입하시겠습니까?');
+		}
+	});
 });
 </script>
 </head>
