--- a/jquery/WebContent/3.event/event04.html
+++ b/jquery/WebContent/3.event/event04.html
@@ -16,19 +16,26 @@ $(function() {
 	
 	/*
 	현재DOM Tree에있는 엘레멘트만 이벤트처리
+	$('li').click(function(e){
+		alert($(e.target).text());
+	});
 	*/
-	
 	
 	
 	/*
-	현재DOM Tree의 ul 에 자식으로 동적으로추가되는 li 엘레멘트도 이벤트처리
+	현재DOM Tree의 ul 에 자식으로 동적으로추가되는(domNodeInsertEvent 내장되어있음) li 엘레멘트도 이벤트처리
+		cf. document 하위에 동적으로 추가되는 그 어떤 자식 엘레먼트도 이벤트 처리 가능
 	*/
-	
+	$('ul').on('click','li',function(e){
+		alert($(e.target).text());
+	});
 	
 	/*
 	동적노드추가버튼 이벤트처리
 	*/
-	
+	$('#btnAdd').click(function(e){
+		$('ul').append('<li>list item '+$('li').length+'</li>');
+	});
 	
 	
 });
