--- a/jquery/WebContent/3.event/form01.html
+++ b/jquery/WebContent/3.event/form01.html
@@ -30,8 +30,19 @@ td {
 			2.jquery ajax요청
 			3.submit default중지
 			*/
-			
-			
+			/*
+			$('#f').on('submit',function(e){
+				
+			});
+			*/
+			$('#f').submit(function(e){
+				alert('submit-->');
+				let parameter1=$(e.target).serialize();	
+				let parameter2=$('#f').serialize();
+				console.log('parameter1: '+parameter1);
+				console.log('parameter2: '+parameter2);
+				e.preventDefault();
+			});
 			
 			/*
 			[
