--- a/jquery/WebContent/3.event/form02.html
+++ b/jquery/WebContent/3.event/form02.html
@@ -23,6 +23,18 @@ td {
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script type="text/javascript">
 	$(function() {
+		/*
+		element 속성 접근
+		*/
+		//attribute set
+		$('#p_image').attr('src','icon1.png');
+		$('#p_image').attr('width','20px');
+		$('#p_image').attr('height','20px');
+		//attribute get
+		console.log($('#p_image').attr('src'));
+		console.log($('#p_image').attr('width'));
+		console.log($('#p_image').attr('height'));
+		
 			/*
 			form태그안에 있는 input element 접근
 			 	- 입력 엘레멘트의 값을 접근할때는  .val() 을사용
@@ -30,23 +42,27 @@ td {
 		           사용자입력데이타를 읽을수있다
 		     */
 			console.log('----------dom tree loading 후에 form element value get -------');
-			console.log("1.$('#id').attr('value')		  [x]:");
-			console.log("1.$('#id').val()        		  [o]:");
-			console.log("2.$('#name').val()      		  [o]:");
-			console.log("3.$('#alias').val()     		  [o]:");
-			console.log("4.$('#job option:selected').val()[o]:");
+			console.log("1.$('#id').attr('value')		  [x]:"+$('#id').attr('value'));
+			console.log("1.$('#id').val()        		  [o]:"+$('#id').val());
+			console.log("2.$('#name').val()      		  [o]:"+$('name').val());
+			console.log("3.$('#alias').val()     		  [o]:"+$('alias').val());
+			console.log("4.$('#job option:selected').val()[o]:"+$('#job option:selected').val());
 			
 			console.log('----------dom tree loading 후에 form element value set -------');
-			
+			$('#id').val('yyy');
+			$('#name').val('김변경');
+			$('#alias').val('제임스딘!');
+			$('#job').val('프리렌서');
+			//$('#job > option')[2].selected=true;
 			
 			
 			$('#f').submit(function(e){
 			   	console.log('----------submit 시에 form element value get -------');
-			   	console.log("1.$('#id').attr('value')		  [x]:");
-				console.log("1.$('#id').val()        		  [o]:");
-				console.log("2.$('#name').val()      		  [o]:");
-				console.log("3.$('#alias').val()     		  [o]:");
-				console.log("4.$('#job option:selected').val()[o]:");
+			   	console.log("1.$('#id').attr('value')		  [x]:"+$('#id').attr('value'));
+				console.log("1.$('#id').val()        		  [o]:"+$('#id').val());
+				console.log("2.$('#name').val()      		  [o]:"+$('name').val());
+				console.log("3.$('#alias').val()     		  [o]:"+$('alias').val());
+				console.log("4.$('#job option:selected').val()[o]:"+$('#job option:selected').val());
 				/*
 				폼을이용한 서버로의 jquery ajax요청
 				1.parameter생성
@@ -54,11 +70,14 @@ td {
 				3.jqury ajax요청
 				4.submit default중지
 				*/
-				var parameter="";
-				console.log(">>>>>>요청파라메타생성:"+parameter)
+				var parameter=$(e.target).serialize();
+				var jsonData=$(e.target).serializeArray(',');
+				console.log(">>>>>>요청파라메타생성:"+parameter);
+				console.log(">>>>>>요청Json Data 생성:"+jsonData);
 				//$.ajax();
-				console.log(">>>>>>ajax요청")
-			    console.log(">>>>>>페이지요청중지")
+				console.log(">>>>>>ajax요청");
+			    console.log(">>>>>>페이지요청중지");
+			    e.preventDefault();
 			});
 			
 		
