--- a/spring_web_application_rest/src/main/resources/static/00.spring_ajax_menu.html
+++ b/spring_web_application_rest/src/main/resources/static/00.spring_ajax_menu.html
@@ -7,11 +7,17 @@
 <body>
 <h1>Spring MessageConverter를 사용한 XML,JSON,TEXT 응답</h1><hr>
 <ol>
-	<li><a href='response_string1'>String response1[MessageConverter]</a></li>
-	<li><a href='response_string2'>String response2[MessageConverter]</a></li>
-	<li><a href='news/1'>JSON News response[MessageConverter] News </a></li>
-	<li><a href='news'>JSON List response[MessageConverter] News List </a></li>
-	<li><a href='map_news'>JSON Map response[MessageConverter] Map </a></li>
+   <li><a href='response_string1'>String response1[MessageConverter]</a></li>
+   <li><a href='response_string2'>String response2[MessageConverter]</a></li>
+   <li><a href='news/1'>JSON News response[MessageConverter] News </a></li>
+   <li><a href='news'>JSON List response[MessageConverter] News List </a></li>
+   <li><a href='map_news'>JSON Map response[MessageConverter] Map </a></li>
+   <li><a href='02.ajaxRequest'>02.ajaxRequest</a></li>
+   <li><a href='03.ajaxRequestGETPOST'>03.ajaxRequestGETPOST </a></li>
+   <li><a href='04.server_clock'>04.server_clock </a></li>
+   <li><a href='05.newsTitlesHTML'>05.newsTitlesHTML </a></li>
+   <li><a href='08.newsTitlesJSON'>08.newsTitlesJSON </a></li>
+   <li><a href='suggest.html'>suggest.html </a></li>
 </ol>
 </body>
 </html>
